--- a/app/src/main/res/layout/item_note_layout.xml
+++ b/app/src/main/res/layout/item_note_layout.xml
@@ -2,103 +2,61 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="16dp"
-    android:background="@color/white"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="4dp">
+    android:id="@+id/item_layout"
+    android:layout_margin="8dp"
+    android:clickable="true"
+    app:cardCornerRadius="12dp"
+    app:cardBackgroundColor="@color/white"
+    app:cardElevation="3dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="16dp"
-        android:paddingBottom="8dp">
+        android:padding="8dp">
 
         <TextView
-            android:id="@+id/note_id"
+            android:id="@+id/date"
+            style="@style/TextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="Note ID"
-            android:textColor="@color/black"
-            android:alpha="0.7"
-            android:textSize="14dp"
+            android:text="20 APR"
+            android:textColor="@color/black50"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/note_id_value"
+            android:id="@+id/title"
+            style="@style/TitleStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:text=""
+            android:layout_marginTop="4dp"
+            android:text="Exploring Ideas"
             android:textColor="@color/black"
-            android:textSize="14dp"
-            app:layout_constraintBottom_toBottomOf="@+id/note_id"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/note_id" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/date" />
 
-
-        <TextView
-            android:id="@+id/msg_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:alpha="0.7"
-            android:text="Message"
-            android:textColor="@color/black"
-            android:textSize="14dp"
-            app:layout_constraintStart_toStartOf="@+id/note_id"
-            app:layout_constraintTop_toBottomOf="@+id/note_id" />
-
-        <TextView
-            android:id="@+id/msg"
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/tags"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginHorizontal="16dp"
-            android:text=""
-            android:textColor="@color/black"
-            android:textSize="14dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/msg_label"
-            app:layout_constraintTop_toBottomOf="@+id/msg_label" />
-
-        <View
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="16dp"
-            android:background="#26000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/msg" />
+            app:layout_constraintTop_toBottomOf="@+id/title"/>
 
-        <ImageView
-            android:id="@+id/delete"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/desc"
+            style="@style/TextStyle"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:padding="8dp"
-            android:src="@drawable/ic_baseline_delete_24"
+            android:text="@string/note_item_desc_placholder"
+            android:textColor="@color/black70"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider"
-            app:tint="@color/black" />
-
-        <ImageView
-            android:id="@+id/edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:padding="8dp"
-            android:src="@drawable/ic_baseline_edit_24"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider"
-            app:tint="@color/black" />
+            app:layout_constraintTop_toBottomOf="@+id/tags" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
