--- a/app/src/main/res/layout/fragment_note_detail.xml
+++ b/app/src/main/res/layout/fragment_note_detail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background_clr"
     android:padding="16dp"
-    tools:context=".note.NoteDetailFragment">
+    tools:context=".ui.note.NoteDetailFragment">
 
     <ImageView
         android:id="@+id/back"
