--- a/app/src/main/res/navigation/app_navigation.xml
+++ b/app/src/main/res/navigation/app_navigation.xml
@@ -1,22 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/app_navigation"
-    app:startDestination="@id/noteListingFragment">
+    app:startDestination="@id/registerFragment">
 
     <fragment
         android:id="@+id/noteListingFragment"
-        android:name="com.example.notesappwithkotlin.note.NoteListingFragment"
+        android:name="com.example.notesappwithkotlin.ui.note.NoteListingFragment"
         android:label="fragment_note_listing"
         tools:layout="@layout/fragment_note_listing" >
         <action
             android:id="@+id/action_noteListingFragment_to_noteDetailFragment"
             app:destination="@id/noteDetailFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/noteDetailFragment"
-        android:name="com.example.notesappwithkotlin.note.NoteDetailFragment"
+        android:name="com.example.notesappwithkotlin.ui.note.NoteDetailFragment"
         android:label="fragment_note_detail"
         tools:layout="@layout/fragment_note_detail" />
+
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.example.notesappwithkotlin.ui.auth.RegisterFragment"
+        android:label="RegisterFragment" >
+        <action
+            android:id="@+id/action_registerFragment_to_noteListingFragment"
+            app:destination="@id/noteListingFragment" />
+    </fragment>
+
 </navigation>
