--- a/app/src/main/res/layout/add_tag_dialog.xml
+++ b/app/src/main/res/layout/add_tag_dialog.xml
@@ -29,16 +29,19 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/tag_dialog_add"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:background="@drawable/black_rect_bg"
-            android:text="Add new tag"
+            android:text="Add New Tag"
+            android:gravity="center"
             android:textAllCaps="false"
             android:textAppearance="@style/SubTitleStyle"
             android:textColor="@color/white"
             app:backgroundTint="@color/black"
             app:icon="@drawable/ic_baseline_add_24"
+            app:iconPadding="5dp"
+            app:iconGravity="textStart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tag_dialog_et" />
