--- a/app/src/main/res/layout/fragment_note_listing.xml
+++ b/app/src/main/res/layout/fragment_note_listing.xml
@@ -7,6 +7,25 @@
     android:background="@color/background_clr"
     tools:context=".ui.note.NoteListingFragment">
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/button2"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="45dp"
+        android:background="@drawable/black_rect_bg"
+        android:gravity="center"
+        android:text="Add New Note"
+        android:textAllCaps="false"
+        android:textAppearance="@style/SubTitleStyle"
+        android:textColor="@color/white"
+        app:backgroundTint="@color/black"
+        app:icon="@drawable/ic_baseline_add_24"
+        app:iconGravity="textStart"
+        app:iconPadding="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="0dp"
@@ -31,16 +50,19 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="45dp"
         android:background="@drawable/black_rect_bg"
-        android:text="Add new note"
+        android:text="Add New Note"
         android:textAllCaps="false"
         android:textAppearance="@style/SubTitleStyle"
         android:textColor="@color/white"
+        android:gravity="center"
         app:backgroundTint="@color/black"
         app:icon="@drawable/ic_baseline_add_24"
+        app:iconPadding="8dp"
+        app:iconGravity="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
