--- a/app/src/main/res/layout/fragment_note_listing.xml
+++ b/app/src/main/res/layout/fragment_note_listing.xml
@@ -7,24 +7,28 @@
     android:background="@color/background_clr"
     tools:context=".ui.note.NoteListingFragment">
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/button2"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="45dp"
-        android:background="@drawable/black_rect_bg"
-        android:gravity="center"
-        android:text="Add New Note"
-        android:textAllCaps="false"
-        android:textAppearance="@style/SubTitleStyle"
-        android:textColor="@color/white"
-        app:backgroundTint="@color/black"
-        app:icon="@drawable/ic_baseline_add_24"
-        app:iconGravity="textStart"
-        app:iconPadding="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <ImageView
+        android:id="@+id/logout"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/ic_baseline_exit_to_app_24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/black" />
+
+    <TextView
+        android:id="@+id/title"
+        style="@style/SubTitleStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="All Notes"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/logout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/logout" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
@@ -35,7 +39,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/logout" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -54,15 +58,15 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="45dp"
         android:background="@drawable/black_rect_bg"
+        android:gravity="center"
         android:text="Add New Note"
         android:textAllCaps="false"
         android:textAppearance="@style/SubTitleStyle"
         android:textColor="@color/white"
-        android:gravity="center"
         app:backgroundTint="@color/black"
         app:icon="@drawable/ic_baseline_add_24"
-        app:iconPadding="8dp"
         app:iconGravity="textStart"
+        app:iconPadding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
