--- a/app/src/main/res/layout/fragment_task_listing.xml
+++ b/app/src/main/res/layout/fragment_task_listing.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:background="@color/background_clr"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.task.TaskListingFragment">
+    tools:context=".ui.task.TaskListingFragment"
+    >
 
     <TextView
         android:id="@+id/title"
@@ -21,7 +22,7 @@
 
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/button"
+        android:id="@+id/add_task_button"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="45dp"
