--- a/app/src/main/res/layout/add_tag_dialog.xml
+++ b/app/src/main/res/layout/add_tag_dialog.xml
@@ -38,7 +38,7 @@
             android:textAllCaps="false"
             android:textAppearance="@style/SubTitleStyle"
             android:textColor="@color/white"
-            app:backgroundTint="@color/black"
+            app:backgroundTint="@color/orange"
             app:icon="@drawable/ic_baseline_add_24"
             app:iconPadding="5dp"
             app:iconGravity="textStart"
