--- a/app/src/main/res/layout/fragment_create_task.xml
+++ b/app/src/main/res/layout/fragment_create_task.xml
@@ -16,7 +16,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:paddingVertical="10dp"
-        android:background="@color/white"
+        android:background="@color/background_clr"
         android:fontFamily="@font/titillium_web_bold"
         android:gravity="center"
         android:text="@string/create_task"
@@ -73,7 +73,7 @@
         android:textAllCaps="false"
         android:textAppearance="@style/SubTitleStyle"
         android:textColor="@color/white"
-        app:backgroundTint="@color/black"
+        app:backgroundTint="@color/orange"
         android:layout_marginTop="36dp"
         android:layout_marginHorizontal="60dp"
         app:layout_constraintEnd_toEndOf="@+id/task_tilayout"
