--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_clr"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.auth.ForgotPasswordFragment">
 
@@ -84,7 +85,7 @@
             android:textAllCaps="false"
             android:textAppearance="@style/SubTitleStyle"
             android:textColor="@color/white"
-            app:backgroundTint="@color/black" />
+            app:backgroundTint="@color/orange" />
 
         <ProgressBar
             android:id="@+id/forgot_pass_progress"
