--- a/app/src/main/res/layout/fragment_note_listing.xml
+++ b/app/src/main/res/layout/fragment_note_listing.xml
@@ -29,23 +29,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.button.MaterialButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button"
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="45dp"
-        android:background="@drawable/black_rect_bg"
-        android:gravity="center"
-        android:text="Add New Note"
-        android:textAllCaps="false"
-        android:textAppearance="@style/SubTitleStyle"
-        android:textColor="@color/white"
-        app:backgroundTint="@color/black"
-        app:icon="@drawable/ic_baseline_add_24"
-        app:iconGravity="textStart"
-        app:iconPadding="8dp"
+        android:layout_margin="20dp"
+        android:contentDescription="Add New Note"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:srcCompat="@drawable/ic_baseline_add_24"
+        app:tint="@color/white"
+        app:backgroundTint="@color/orange"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
