--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/background_clr"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -97,39 +97,6 @@
         app:layout_constraintTop_toBottomOf="@+id/last_name_label" />
 
     <TextView
-        android:id="@+id/job_title_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/titillium_web_regular"
-        android:text="Job Title"
-        android:textColor="@color/black"
-        android:textSize="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/last_name_et" />
-
-    <EditText
-        android:id="@+id/job_title_et"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:background="@drawable/black_white_rect_bg"
-        android:ems="10"
-        android:fontFamily="@font/titillium_web_regular"
-        android:inputType="textPersonName"
-        android:textColor="@color/black"
-        android:textSize="14dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/job_title_label" />
-
-    <TextView
         android:id="@+id/email_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -140,7 +107,7 @@
         android:textColor="@color/black"
         android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/job_title_et" />
+        app:layout_constraintTop_toBottomOf="@+id/last_name_et" />
 
     <EditText
         android:id="@+id/email_et"
@@ -154,7 +121,7 @@
         android:background="@drawable/black_white_rect_bg"
         android:ems="10"
         android:fontFamily="@font/titillium_web_regular"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         android:textColor="@color/black"
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -191,7 +158,6 @@
         app:layout_constraintStart_toStartOf="@+id/email_et"
         app:layout_constraintTop_toBottomOf="@+id/pass_label" />
 
-
     <RelativeLayout
         android:id="@+id/button_layout"
         android:layout_width="0dp"
@@ -212,7 +178,7 @@
             android:textAppearance="@style/SubTitleStyle"
             android:textColor="@color/white"
             android:gravity="center"
-            app:backgroundTint="@color/black" />
+            app:backgroundTint="@color/orange" />
 
         <ProgressBar
             android:id="@+id/register_progress"
